Add final server

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'com.server'
+group 'com.filesynch'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
@@ -13,5 +13,10 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '6.0.0.Alpha3'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.2.4.RELEASE'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
+    compile group: 'com.github.gwenn', name: 'sqlite-dialect', version: '0.1.0'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
 }
