--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,5 @@ db.password=
 #Hibernate Configuration:
 db.hibernate.dialect=org.hibernate.dialect.SQLiteDialect
 db.hibernate.show_sql=true
-db.entitymanager.packages.to.scan=com.filesynch.dto
+db.entitymanager.packages.to.scan=com.filesynch.entity
 db.hibernate.hbm2ddl.auto=update
