--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,17 @@ version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
+task fatJar(type: Jar) {
+    manifest {
+        attributes 'Implementation-Title': 'Gradle Jar File Example',
+                'Implementation-Version': version,
+                'Main-Class': 'com.filesynch.Main'
+    }
+    baseName = project.name + '-all'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
+
 repositories {
     mavenCentral()
     maven{
@@ -31,7 +42,8 @@ dependencies {
     compile 'org.hibernate:hibernate-hikaricp:5.3.6.Final'
     compile 'org.hibernate:hibernate-ehcache:5.3.6.Final'
     compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.2.4.RELEASE'
-    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.30.1'
     compile group: 'com.github.gwenn', name: 'sqlite-dialect', version: '0.1.0'
 //    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.30'
